Fixed menu on mobile + images on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -45,3 +45,9 @@ body {
 html {
   scroll-padding-top: 50px; /* height of sticky header */
 }
+
+@media (max-width: 767px) {
+    .keywordsJumbo {
+        display:none;
+    }
+}
